--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
         "@angular/platform-browser": "^4.0.0",
         "@angular/platform-browser-dynamic": "^4.0.0",
         "@angular/router": "^4.0.0",
+        "angular2-jwt": "^0.2.3",
         "arrive": "^2.4.1",
+        "auth0-js": "^8.10.1",
         "bootstrap": "^3.3.7",
         "bootstrap-notify": "3.1.3",
         "chartist": "^0.11.0",
